fix: ensure header links work and logo is sized correctly (#531)
* fix image layout issue

* fix header menu links not working

* fix test and prevent duplicate event calling

* do not grow item header

--- a/components/header/header.component.scss
+++ b/components/header/header.component.scss
@@ -66,7 +66,7 @@
     flex-grow: 1;
 
     .logoImageLink {
-      display: grid;
+      display: contents;
     }
 
     .logoImage {
@@ -124,7 +124,7 @@
   }
 
   .links {
-    flex: 1;
+    flex: 0;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
